<resources>

    <string name="app_name">Charaza</string>
    <string name="app_slogan">Because all bad people are pigs</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_mulika">Charaza</string>
    <string name="title_activity_ranks">Charaza</string>
    <string name="mulikaSubTitle">Mulika</string>
    <string name="profileActivitySubTitle">Profile</string>
    <string name="nameLabelText">Name of the person</string>
    <string name="extraInfoButtonContentDescription">press this button if you want to add exta information about the person</string>
    <string name="postLabelText">What is he/she?</string>
    <string name="detailsLabelText">What did he/she do?</string>
    <string name="mulikaButtonContentDescription">press this button to report the incident</string>
    <string name="nameHeadingText">Name</string>
    <string name="charazwadHeadingText">Charazwad</string>
    <string name="moreButtonContentDescription">press this button to expand the list</string>
    <string name="charazaButtonContentDescription">press this button to charaza this person</string>
    <string name="commentButtonContentDescription">press this button to comment on this incident</string>
    <string name="postCommentButtonContentDescription">press this button to post your comment</string>
    <string name="profileActivityDescriptionContentDescription">Profile Image of the culprit</string>
    <string name="ranksSubTitle">Rankings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_extra_info">Charaza</string>
    <string name="title_activity_charaza_activity">Charaza</string>
    <string name="helpTextText">Press + to add anything else that you know about the person</string>
    <string name="noCommentText">No one has commented on this incident. Press the comment button to add a comment</string>
    <string name="plusContentDestription">press this button to add something else about the person</string>
    <string name="doneButtonContentDescription">press this button to save</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="splashScreenContentDescription">Splash screen image</string>
    <string name="mulikaSideNavigationTitle">Mulika</string>
    <string name="ranksSideNavigationTitle">Rankings</string>
    <string name="latestSideNavigationTitle">Latest</string>
    <string name="settingsSideNavigationTitle">Settings</string>
    <string name="helpSideNavigationTitle">Help</string>
    <string name="aboutSideNavigationTitle">About</string>
    <string name="doneButtonText">Done</string>
    <string name="aliasAddButtonText">Okay</string>
    <string name="charazaButtonText">Charaza</string>
    <string name="commentButtonText">Comment</string>
    <string name="postCommentButtonText">Post</string>
    <string name="title_activity_latest">Latest</string>
    <string name="latestNameHeadingText">Name</string>
    <string name="latestTimeHeadingText">Time</string>
    <string name="title_activity_about">About</string>
    <string name="appCreditsDescriptionText">Charaza was designed and developed by Jason Rogena (jasonrogena@gmail.com)</string>
    <string name="appCreditsText">Credits</string>
    <string name="appVersionDescriptionText">This version is the first to be released to the public and is considered a pre-beta version. Your feedback will be highly appreciated. Please forgive the occasional bug</string>
    <string name="appversionText">Version 1.0</string>
    <string name="appNameDescriptionText">Charaza is a croudsourced community policing application whose aim is to whistleblow injustices committed on the Kenyan mwanainchi</string>
    <string name="welcomeDescription">This is probably your first time so please take some time to read through the instructions</string>
    <string name="mulikaIntroduction">In this page you can report on someone who has commited a crime</string>
    <string name="ranksIntroduction">In this screen, you can view who has been charazwad the most</string>
    <string name="profileIntroduction">This page shows information about the person you have just selected</string>
    <string name="profileExplanationText">This page shows the crimes this person has committed. Press on any of the crimes to comment on that particular crime</string>
    <string name="charazaExplanationText">Press the charaza button at the bottom of the screen to charaza the person</string>
    <string name="latestIntroduction">This screen contains a list of people who have most recently committed crimes</string>
    <string name="latestExplanationText">Click any of the names in the list to view the crimes the person has committed</string>
    <string name="ranksExplanationText">The list in this screen shows the names and the number of times the people in the list have been charazwad. Click on any of the names in the list to view the crimes the person has committed</string>
    <string name="menuButtonExplanationText">Press the pig in the top-left corner of the screen to navigate to other pages in the application</string>
    <string name="extraInfoButtonExplanation">If you know something else about the person (apart from the name), press the + button</string>
    <string name="mulikaButtonExplanationText">When you are done adding information about the crime, press the flashlight</string>
    <string name="welcomeText">Charaza is a Kenyan whistle-blowing application with a twist. With Charaza, you can either report on somebody\'s criminal activity or charaza the people who have already been reported on</string>
    <string name="welcomeHeading">Welcome</string>
    <string name="mulikaInstructionsHeadintText">About Mulika</string>
    <string name="ranksInstructionsHeading">About Rankings</string>
    <string name="profileInstructionsHeading">About Profile</string>
    <string name="appNameText">Charaza</string>
    <string name="title_activity_incident">IncidentActivity</string>
    <string name="menuButtonContentDescription">The menu button</string>
    <string name="mulikaButtonImageContentDescription">The mulika button</string>
    <string name="extraInfoButtonContentDescription">The Extra-Info button</string>
    <string name="latestInstructionsHeading">About Latest</string>

</resources>