<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mulikaSideNavigation"
        android:icon="@drawable/action_mulika"
        android:title="@string/mulikaSideNavigationTitle"/>
    <item
        android:id="@+id/ranksSideNavigation"
        android:icon="@drawable/collections_sort_by_size"
        android:title="@string/ranksSideNavigationTitle"/>
    <item
        android:id="@+id/latestSideNavigation"
        android:icon="@drawable/today"
        android:title="@string/latestSideNavigationTitle"/>
    <!-- <item
        android:id="@+id/settingsSideNavigation"
        android:icon="@drawable/action_settings"
        android:title="@string/settingsSideNavigationTitle"/> -->
    <!-- <item
        android:id="@+id/helpSideNavigation"
        android:icon="@drawable/action_help"
        android:title="@string/helpSideNavigationTitle"/> -->
    <item
        android:id="@+id/aboutSideNavigation"
        android:icon="@drawable/action_about"
        android:title="@string/aboutSideNavigationTitle"/>
</menu>