<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mulikaInstructionsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutColor">
    <TextView 
        android:id="@+id/mulikaInstructionsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mulikaInstructionsHeadintText"
        android:textSize="22dp"
        android:layout_marginTop="@dimen/fromUnrelatedViewVMargin"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:layout_alignParentTop="true"
        android:textColor="@color/incidentTimeTextColor"/>
    <TextView 
        android:id="@+id/mulikaInstructionsIntroduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mulikaIntroduction"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:layout_below="@id/mulikaInstructionsHeading"
        android:textColor="@color/normalTextColor" />
    
     <ImageView 
        android:id="@+id/extraInfoButtonImage"
        android:contentDescription="@string/extraInfoButtonContentDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/mulikaInstructionsIntroduction"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/extra_info_button_image"
        android:scaleType="centerInside"/>
     <TextView 
        android:id="@+id/extraInfoButtonExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/extraInfoButtonImage"
        android:text="@string/extraInfoButtonExplanation"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_below="@id/mulikaInstructionsIntroduction"
        android:textColor="@color/normalTextColor" />
     <ImageView 
        android:id="@+id/mulikaButtonImage"
        android:contentDescription="@string/mulikaButtonImageContentDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/extraInfoButtonExplanation"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/mulika_button_image"
        android:scaleType="centerInside"/>
     <TextView 
        android:id="@+id/mulikaButtonExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/mulikaButtonImage"
        android:text="@string/mulikaButtonExplanationText"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:layout_below="@id/extraInfoButtonImage"
        android:textColor="@color/normalTextColor" />
     <ImageView 
        android:id="@+id/menuButtonImage"
        android:contentDescription="@string/menuButtonContentDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/mulikaButtonExplanation"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/menu_button_image"
        android:scaleType="centerInside"/>
     <TextView 
        android:id="@+id/menuButtonExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/menuButtonImage"
        android:text="@string/menuButtonExplanationText"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_below="@id/mulikaButtonImage"
        android:textColor="@color/normalTextColor" />
     <Button 
        android:id="@+id/mulikaInstructionsButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/menuButtonExplanation"
        android:layout_marginTop="@dimen/fromUnrelatedViewVMargin"
        android:background="@color/normalButtonBackgroundColor"
        android:text="@string/aliasAddButtonText"
        android:textColor="@color/normalButtonTextColor"
        android:textSize="@dimen/normalButtonTextSize"/>
    
</RelativeLayout>