<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/latestInstructionsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutColor">
    <TextView 
        android:id="@+id/latestInstructionsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latestInstructionsHeading"
        android:textSize="22dp"
        android:layout_marginTop="@dimen/fromUnrelatedViewVMargin"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:layout_alignParentTop="true"
        android:textColor="@color/incidentTimeTextColor"/>
    <TextView 
        android:id="@+id/latestInstructionsIntroduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latestIntroduction"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:layout_below="@id/latestInstructionsHeading"
        android:textColor="@color/normalTextColor" />
    <TextView 
        android:id="@+id/latestExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latestExplanationText"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:layout_below="@id/latestInstructionsIntroduction"
        android:textColor="@color/normalTextColor" />
    <ImageView 
        android:id="@+id/latestMenuButtonImage"
        android:contentDescription="@string/menuButtonContentDescription"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/latestExplanation"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/menu_button_image"
        android:scaleType="centerInside"/>
     <TextView 
        android:id="@+id/latestMenuButtonExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/latestMenuButtonImage"
        android:text="@string/menuButtonExplanationText"
        android:textSize="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_below="@id/latestExplanation"
        android:textColor="@color/normalTextColor" />
     <Button 
        android:id="@+id/latestInstructionsButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/latestMenuButtonExplanation"
        android:layout_marginTop="@dimen/fromUnrelatedViewVMargin"
        android:background="@color/normalButtonBackgroundColor"
        android:text="@string/aliasAddButtonText"
        android:textColor="@color/normalButtonTextColor"
        android:textSize="@dimen/normalButtonTextSize"/>
    
</RelativeLayout>