<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layoutColor">
    <TextView
        android:id="@+id/welcomeHeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeHeading"
        android:textSize="22dp"
        android:layout_marginTop="@dimen/fromUnrelatedViewVMargin"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:textColor="@color/incidentTimeTextColor"/>
    <TextView 
        android:id="@+id/welcomeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeDescription"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:textColor="@color/normalTextColor" />
    <TextView 
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/sideMargin"
        android:layout_marginRight="@dimen/sideMargin"
        android:textColor="@color/normalTextColor" />
    <Button 
        android:id="@+id/welcomeDoneButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/fromUnrelatedViewVMargin"
        android:background="@color/normalButtonBackgroundColor"
        android:text="@string/aliasAddButtonText"
        android:textColor="@color/normalButtonTextColor"
        android:textSize="@dimen/normalButtonTextSize"/>
</LinearLayout>