<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/incidentActivityMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutColor" >

    <ScrollView 
        xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/incidentActivityScrollView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:clipChildren="true"
		android:fillViewport="false">
        
        <RelativeLayout 
	    	android:id="@+id/incidentActivityRelativeLayout"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingBottom="@dimen/fromRelatedViewVMargin">
	    	
            <ProgressBar 
			    android:id="@+id/profileActivityProgressBar"
			    android:layout_centerInParent="true"
			    android:layout_width="30dp"
			    android:layout_height="30dp"
			    android:layout_gravity="center_vertical|center_horizontal"
			    android:visibility="gone"/>
            <TextView 
			    android:id="@+id/incidentActivityName"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="@dimen/fromTitleVMargin"
			    android:layout_alignParentLeft="true"
			    android:layout_marginLeft="@dimen/sideMargin"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/normalTextColor"
			    android:textStyle="bold"
			    android:textSize="@dimen/profileNameTextSize"/>
            
	    </RelativeLayout>
    </ScrollView>
    <Button 
        android:id="@+id/incidentActivityCommentButton"
        android:contentDescription="@string/commentButtonContentDescription"
        android:layout_height="@dimen/commentButtonHeight"
        android:layout_width="match_parent"
        android:text="@string/commentButtonText"
        android:background="@color/aliasButtonBackground"
        android:textColor="@color/normalTextColor"
        android:textSize="@dimen/normalButtonTextSize"
        android:layout_above="@+id/incidentActivityCharazaButton"/>
    <Button 
	    android:id="@id/incidentActivityCharazaButton"
	    android:contentDescription="@string/charazaButtonContentDescription"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:text="@string/charazaButtonText"
	    android:background="@color/normalButtonBackgroundColor"
	    android:textColor="@color/normalButtonTextColor"
	    android:textSize="@dimen/normalButtonTextSize"
	    android:layout_alignParentBottom="true"/>
	<com.devspark.sidenavigation.SideNavigationView
        android:id="@+id/side_navigation_view_incident_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
