<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/extraInfoScrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<RelativeLayout 
		android:id="@+id/extraInfoRelativeLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/layoutColor">
		<!--  <View 
		    android:layout_width="fill_parent"
	      	android:layout_height="@dimen/activityTitleHeight"
	      	android:layout_alignParentTop="true"
	      	android:background="@color/activityTitleColor"/>
		<TextView 
			android:id="@+id/extraInfoTitle"
	      	android:layout_width="fill_parent"
	      	android:layout_height="@dimen/activityTitleHeight"
	      	android:layout_marginLeft="@dimen/titleTextLeftMargin"
	      	android:layout_alignParentTop="true"
	      	android:text="@string/mulikaSubTitle"
	      	android:textColor="@color/activityTitleTextColor"
	      	android:textSize="@dimen/activityTitleTextSize"
	      	android:textStyle="bold"
	      	android:typeface="sans"
	      	android:gravity="center_vertical"/>
		<View 
		    android:id="@+id/extraInfoTitleSeperator"
		    android:layout_width="fill_parent"
		    android:layout_height="0.5dp"
		    android:background="@color/activityTitleSeperatorColor"
		    android:layout_below="@id/extraInfoTitle"/>-->
		<TextView 
	        android:id="@+id/helpText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:text="@string/helpTextText"
	        android:textSize="@dimen/normalTextSize"
	        android:textColor="@color/normalTextColor"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="18dp"
	        android:layout_marginLeft="8dp"/>
		<ImageButton 
	        android:id="@+id/plus"
	        android:contentDescription="@string/plusContentDestription"
	        android:layout_width="250dp"
	        android:layout_height="45dp"
	        android:layout_marginTop="18dp"
	        android:layout_below="@id/helpText"
	        android:layout_centerHorizontal="true"/>
	    <ImageButton
	        android:id="@+id/doneButton"
	        android:contentDescription="@string/doneButtonContentDescription"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:layout_alignParentBottom="true"/>
	    <com.devspark.sidenavigation.SideNavigationView
	        android:id="@+id/side_navigation_view_extra_info"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />
	</RelativeLayout>
</ScrollView>